footer width fix on mobile view.

--- a/student-cvs/ernzxr-2086/style.css
+++ b/student-cvs/ernzxr-2086/style.css
@@ -354,6 +354,7 @@ footer {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    width: 100%;
 }
 
 .rrss-container {
